src/objects/KL_Data__c.object
<CustomObject>
    <fields>
        <fullName>Code_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code_ID__c</fullName>
        <description>For upserting records</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Indicator_Type__c</fullName>
        <description>Added per US3682632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Indicator Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Added per US3682632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Added per US3682632</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KL Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KL Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>